# kanata-switcher

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LLM-TODO.md  README.md  build.rs  build.sh  config.example.json  flake.nix  install-gnome-shell-ext.sh  run.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml
devops/: release.sh
llm-docs/: LLM-TODO.md  QUICK-START.md  architecture.md  gnome-shell-prior-art.md  implementation-notes.md
qa/: README.md  autostart-checklist.md  cli-control-checklist.md  desktop-backends-checklist.md  focus-rules-checklist.md  gnome-extension-checklist.md  installation-checklist.md  native-terminal-checklist.md  sni-indicator-checklist.md  systemd-service-checklist.md
src/daemon/: integration_tests.rs  main.rs  tests.rs
src/gnome-extension/: daemon-state.js  dbus.js  extension.js  focus.js  format.js  metadata.json  prefs.js
src/gnome-extension/schemas/: org.gnome.shell.extensions.kanata-switcher.gschema.xml
systemd/: kanata-switcher.service
tests/: flake.nix  gnome-extension-daemon-state.js  gnome-extension-dbus.js  gnome-extension-focus.js  gnome-extension-format.js
