[package]
name = "kanata-switcher"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Daemon for kanata layer switching based on focused window"

[[bin]]
name = "kanata-switcher"
path = "src/daemon/main.rs"

[features]
default = ["embed-gnome-extension"]
embed-gnome-extension = []

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
zbus = "5"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tempfile = "3"
libc = "0.2"
futures-util = "0.3"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-backend = "0.3"
wayland-scanner = "0.31"
x11rb = "0.13"
